--- a/news-app/package.json
+++ b/news-app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "dotenv": "^8.2.0",
     "lodash": "^4.17.11",
     "material-design-icons-iconfont": "^3.0.3",
     "roboto-fontface": "*",
